Bug 204741 - "Clear Scrollback & Reset" breaks apps using the secondary screen (vim, less)
Summary: "Clear Scrollback & Reset" breaks apps using the secondary screen (vim, less)
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-22 09:56 UTC by Constantin Berzan
Modified: 2011-08-26 16:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Constantin Berzan 2009-08-22 09:56:43 UTC
Version:            (using KDE 4.3.0)
OS:                Linux
Installed from:    Ubuntu Packages

The 'Clear Scrollback & Reset' action should be disabled for apps using the secondary screen. Those apps do not have any scrollback (except what is immediately visible on the screen).

Currently the action is not disabled, and leads to weird behaviour:

How to reproduce:
Start vim and type something. Konsole's scrollbar doesn't allow scrolling -- this is correct. Now press Ctrl+Shift+X (or Clear & Reset from the Scrollback menu).  After this, the arrow keys in vim stop working, and the scrollbar mistakenly begins to allow scrolling.  (I think konsole has just switched to the primary, scrollable screen).  The only way to fix it is to quit vim and run /usr/bin/reset.

Similar broken behaviour is visible if one presses Ctrl+Shift+X while using less.
Comment 1 Jekyll Wu 2011-08-26 16:23:27 UTC
Git commit 0ddf722e08a5f18c115c84cd83e78b5c7ef8a3a3 by Jekyll Wu.
Committed on 26/08/2011 at 18:10.
Pushed by jekyllwu into branch 'master'.

Disable clear & reset actions when the secondary screen is in use.

BUG:204741
FIXED-IN: 4.8

M  +13   -0    src/Session.h
M  +11   -0    src/SessionController.cpp
M  +9    -0    src/Emulation.h
M  +7    -0    src/Emulation.cpp
M  +5    -0    src/SessionController.h
M  +2    -0    src/ViewManager.cpp
M  +8    -0    src/Session.cpp

http://commits.kde.org/konsole/0ddf722e08a5f18c115c84cd83e78b5c7ef8a3a3