Disable clear & reset actions when the secondary screen is in use.

BUG:204741
FIXED-IN: 4.8