src/Emulation.cpp
@@ -99,6 +99,11 @@ ScreenWindow* Emulation::createWindow()
     return window;
 }
 
+void Emulation::checkScreenInUse()
+{
+    emit primaryScreenInUse( _currentScreen == _screen[0] );
+}
+
 Emulation::~Emulation()
 {
     QListIterator<ScreenWindow*> windowIter(_windows);
@@ -122,6 +127,8 @@ void Emulation::setScreen(int n)
         // tell all windows onto this emulation to switch to the newly active screen
         foreach(ScreenWindow* window,_windows)
             window->setScreen(_currentScreen);
+
+        checkScreenInUse();
     }
 }
 
